--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@iconscout/react-unicons",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "1100+ vector icons as easy to use React Components",
   "types": "dist/index.d.ts",
   "main": "dist/index.js",
@@ -40,5 +40,6 @@
     "tsup": "^6.5.0",
     "typescript": "^4.9.4",
     "uppercamelcase": "^3.0.0"
-  }
+  },
+  "type": "module"
 }
