--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.3.1",
   "description": "1100+ vector icons as easy to use React Components",
   "types": "dist/index.d.ts",
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
+  "main": "dist/index.cjs",
+  "module": "dist/index.js",
   "sideEffects": false,
   "scripts": {
     "generate": "node ./build/generate.js",
